@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.3.1" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.3.2" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -36,23 +36,8 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.3.1 - Nov. 18, 2019[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed TVDb for new changed xml file names.  Please note TVDb is still not
-    fully fixed on their end. On 11-16-19 I retrieved the
-    xmls to discover many tags inside the files were
-    missing data, or lacked closing tags, so looks like
-    they have more updating to do.  Season posters
-    are not working at this time from them and they're
-    only providing a show poster.[/I]
-[COLOR yellow]--[/COLOR][I] Added setting option to remove "CAM and SD sources".  Note this new
-    option will only take place if better than
-    "CAM and SD" sources exists to avoid nothing
-    returned for links.[/I]
-[COLOR yellow]--[/COLOR][I] Added new setting option to remove "3D sources".[/I]
-COLOR yellow]--[/COLOR][I] Added new setting Category called "Shortcuts".  This now allows you to
-    clear specific cache without backing out of menus
-    and going into Tools. Call up "Venom Settings"
-    and go to "Shortcuts" anywhere.[/I]
+[B][COLOR red]Update - v3.3.2 - Nov. 24, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed TVDb for changed xml file names....AGAIN![/I]
 		</news>
 	</extension>
 </addon>
